@@ -137,10 +137,9 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<release>14</release>
-					<compilerArgs>
-						<arg>--enable-preview</arg>
-					</compilerArgs>
+            		<source>15</source>
+            		<target>15</target>
+					<release>15</release>
 					<forceJavacCompilerUse>true</forceJavacCompilerUse>
 					<parameters>true</parameters>
 				</configuration>
